# flul-cpp-dojo

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.claude/: settings.json
.claude/hooks/: format-cpp.sh
core/: CMakeLists.txt
core/dispatcher/: CMakeLists.txt
core/dispatcher/include/: experiment_registry.hpp
core/dispatcher/test/: experiment_registry_test.cpp
core/runner/: CMakeLists.txt  main.cpp
dojo/: CMakeLists.txt
dojo/features/: CMakeLists.txt  _placeholder.cpp  function_objects.cpp
dojo/katas/: CMakeLists.txt  hello_world.cpp
dojo/patterns/: CMakeLists.txt
dojo/sandbox/: CMakeLists.txt
dojo/sandbox/dispatcher_examples/: CMakeLists.txt
dojo/sandbox/dispatcher_examples/src/: main.cpp
dojo/sandbox/dispatcher_examples/src/experiments/: hello_world.cpp  string_concat.cpp  vector_push_back.cpp
experiments/: CMakeLists.txt
features/: CMakeLists.txt
katas/: CMakeLists.txt  hello_world.cpp
patterns/: CMakeLists.txt
